<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>org.matsim</groupId>
		<artifactId>matsim-all</artifactId>
		<version>2025.0-PR3483</version>
		<!--		<version>16.0-SNAPSHOT</version>-->
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.matsim-scenarios</groupId>
	<artifactId>matsim-metropole-ruhr</artifactId>
	<version>2.0</version>

	<name>MATSim Metropole Ruhr project</name>
	<description>MATSim Metropole Ruhr project</description>

	<properties>
		<!-- Don't modify this, change the parent version instead! -->
		<matsim.version>${project.parent.version}</matsim.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sonar.organization>matsim-scenarios</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<repositories>
	  <!--Note that in general repositories are not transitive, so they need to be repeated at every level where needed.-->
		<repository>
			<!-- Geotools is not on Maven central -->
			<id>osgeo</id>
			<name>Geotools repository</name>
			<!-- <url>http://download.osgeo.org/webdav/geotools</url> -->
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
		<!-- Repository for MATSim releases (MATSim is not on Maven central) -->
		<repository>
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>
 		<repository>
			<!-- For MATSim snapshots: -->
			<id>ojo-snapshots</id>
			<url>https://oss.jfrog.org/libs-snapshot</url>
		</repository>

		<!-- Temporarily needed for the osm reader -->
        <repository>
            <id>topobyte</id>
            <url>https://mvn.topobyte.de</url>
        </repository>
        <repository>
            <id>slimjars</id>
            <url>https://mvn.slimjars.com</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/matsim-scenarios/matsim-metropole-ruhr</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<!-- This is the matsim "core": -->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<!-- Junit 5 testing. Version is inherited from the parent project (MATSim), thus not needed here -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<!--MATSim test infrastructure.  Not transitive.-->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>

		<!--dependencies from here to where stated below are added as a service; they can be removed if you don't need them-->
		<!--to get ExamplesUtils: -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>

		<!--some contribs:-->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>otfvis</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>bicycle</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>accessibility</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>application</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>simwrapper</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
            <groupId>com.github.matsim-org</groupId>
            <artifactId>gtfs2matsim</artifactId>
			<version>fc8b13954d</version>
			<exclusions>
				<exclusion>
					<groupId>org.matsim</groupId>
					<artifactId>matsim</artifactId>
				</exclusion>
			</exclusions>
        </dependency>

		<dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.3.0</version>
        </dependency>

		<dependency>
			<groupId>com.github.matsim-vsp</groupId>
			<artifactId>pt-extensions</artifactId>
			<version>ceef00ef6e</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>small-scale-traffic-generation</artifactId>
			<version>${matsim.version}</version>
		</dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
					<showWarnings>false</showWarnings>
					<showDeprecation>false</showDeprecation>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>  <!-- Create sources.jar -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M9</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<!-- avoid out of memory errors: -->
					<argLine>-Xmx6500m -Djava.awt.headless=true -Dmatsim.preferLocalDtds=true</argLine>
					<!--necessary in tu berlin gitlab. BUT not good in other places, so solve by command line switch only where needed.  kai, nov'18-->
					<!--<useSystemClassLoader>false</useSystemClassLoader>-->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Fetch Git information	-->
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>5.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${project.basedir}/${project.build.finalName}-${git.commit.id.describe-short}.jar</outputFile>

							<transformers>
								<!-- This bit sets the main class for the executable jar as you otherwise would with the assembly plugin -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>org.matsim.run.RunMetropoleRuhrScenario</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
										<SCM-Revision>${git.commit.id.describe-short}</SCM-Revision>
										<Multi-Release>true</Multi-Release>
									</manifestEntries>
								</transformer>
								<!-- This bit merges the various GeoTools META-INF/services files         -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
							<filters>
								<!-- Avoid signature checking -->
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.0</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>10.6.0</version>
					</dependency>
				</dependencies>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<failsOnError>false</failsOnError>
					<failOnViolation>false</failOnViolation>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<id>checkstyle</id>
						<phase>package</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<!-- select non-aggregate reports -->
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>
